src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageMultisample_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageMultisample_StringErrorContext.class */
public final class ARBTextureStorageMultisample_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTexStorage2DMultisample(IIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageMultisampleErrorContext");
        methods.put("glTexStorage3DMultisample(IIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageMultisampleErrorContext");
        methods.put("glTextureStorage2DMultisampleEXT(IIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageMultisampleErrorContext");
        methods.put("glTextureStorage3DMultisampleEXT(IIIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageMultisampleErrorContext");
        return methods;
    }
}
